Hot Fixes for deploy. Fixed bug with post ticker on homepage. Disabled parallax on pages for cleaner interface on mobile until a more in-depth fix can be done. Added timestamp instead of description for posts

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,7 +3,7 @@
 
   height: 375px;
 
-  background-attachment: fixed;
+  //background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
